Basic CSS added.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="hero">
         <div class="header">
             <div class="logo">
-                <h1>Logo</h1>
+                <h1>Lo<span>go</span></h1>
             </div>
             <ul class="nav">
                 <li>Home</li>
