Final release for my PC. 'Responsiveness must be ADDED'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="">
     <div class="hero">
         <div class="header">
             <div class="logo">
@@ -37,7 +37,7 @@
                 <ion-icon name="construct-outline"></ion-icon>
                 <ion-icon name="people-outline"></ion-icon>
                 <ion-icon name="mail-outline"></ion-icon>
-                <ion-icon name="mail-outline"></ion-icon>
+                <ion-icon name="moon-outline" id="dark-change"></ion-icon>
             </div>
         </div>
     </div>
